# data-retrieval

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/data_retrieval/: __init__.py  main.py
src/data_retrieval/usta/tournaments/: client.py
src/data_retrieval/usta/tournaments/mappings/: search_filters.py
src/data_retrieval/usta/tournaments/models/: __init__.py  category.py  dates.py  district.py  event.py  facility.py  format.py  gender.py  player.py  rating.py  section.py  tournament.py  tournament_status.py
src/data_retrieval/usta/tournaments/scripts/: get_usta_socal_adult_tournament_data.py
tests/: __init__.py
