[project]
name = "data-retrieval"
version = "0.1.0"
description = ""
authors = [
    {name = "Maegen Demko",email = "mvd326@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "pip (>=25.1.1,<26.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[project.scripts]
retrieve-socal-adult-tournament-data = "data_retrieval.usta.tournaments.scripts.get_usta_socal_adult_tournament_data:main"

[tool.isort]
profile = "black"

[tool.poetry]
packages = [{include = "data_retrieval", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
